--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,7 +1,4 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         
@@ -12,7 +9,8 @@
             "program": "${workspaceFolder}/ex1",
             "args": [],
             "cwd": "${workspaceFolder}",
-            "preLaunchTask": "C/C++: g++ 生成活动文件"
+            // 注意了，这个关联tasks.json
+            "preLaunchTask": "build and run"
         }
     ]
 }
